# mikrokosmos

./: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml
mikrokosmos/: __init__.py  environments.py  mikro.py  objects.py  utils.py
tests/: conftest.py  test_basic_objects.yml  test_mikro.py  test_objects.py  test_scenario.yml  test_triggered_objects.yml
