[tool.poetry]
name = "mikrokosmos"
version = "0.1.0"
description = "A (test) data generator and scenario simulation framework"
authors = ["Eirik Krogstad <eirikkr@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/protojour/mikrokosmos"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.3.0"
click = "^7.0"
faker = "^4.0.0"
pendulum = "^2.0.5"
pyyaml = "^5.3"
simpy = "^3.0.11"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.4"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
mikro = "mikrokosmos:mikro"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
